1.修改文字样式

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -21,6 +21,8 @@
 
     <SolidColorBrush x:Key="BackgroudBrush" Color="#1A2A3A" />
 
+    <SolidColorBrush x:Key="TransparentBrush" Color="Transparent" />
+
     <SolidColorBrush x:Key="HarwareButtonWhiteBrush" Color="White" />
 
     <SolidColorBrush x:Key="BlackBrush" Color="Black" />
