--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles-ch.xaml
@@ -46,6 +46,20 @@
         <Setter Property="Foreground" Value="{DynamicResource ForegroundOrangeBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource Double20}" />
     </Style>
+    <Style x:Key="MainTextStyle7" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="{DynamicResource ForegroundWhiteBrush}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double20}" />
+    </Style>
+    <Style x:Key="MainTextStyle8" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="0,0" />
+        <Setter Property="Foreground" Value="{DynamicResource ForegroundOrangeBrush}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double18}" />
+    </Style>
     <Style x:Key="AxleTextStyle1" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Top" />
