--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -14,7 +14,9 @@
     <system:String x:Key="CoolingWaterTemperature" xml:space="preserve">冷却&#13;水温</system:String>
     <system:String x:Key="OILTEngineOilTemperature" xml:space="preserve">机油&#13;温度</system:String>
     <system:String x:Key="FaultInfo" xml:space="preserve">故障&#13;信息</system:String>
-    <system:String x:Key="AxleTemperature" xml:space="preserve">轴 &#13;&#13;温</system:String>
+    <system:String x:Key="AxleTemperature" xml:space="preserve">轴&#13;&#13;温</system:String>
+    <system:String x:Key="AxleTemperature1" xml:space="preserve">轴温</system:String>
+    <system:String x:Key="CurrentMaxOther" xml:space="preserve">本&#13;MAX&#13;他</system:String>
     <system:String x:Key="AxleBitTemperature">轴位温度℃</system:String>
     <system:String x:Key="Axial" xml:space="preserve">轴位</system:String>
     <system:String x:Key="Temperature">温度℃</system:String>
