--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
@@ -13,8 +13,10 @@
     <system:String x:Key="FuelPressure" xml:space="preserve">Давленне М-горення</system:String>
     <system:String x:Key="CoolingWaterTemperature" xml:space="preserve">Т゜С&#13;охлводы</system:String>
     <system:String x:Key="OILTEngineOilTemperature" xml:space="preserve">Т゜С&#13;масла</system:String>
-    <system:String x:Key="FaultInfo" xml:space="preserve">Аварня Инфор мацня</system:String>
-    <system:String x:Key="AxleTemperature" xml:space="preserve">Т゜С  оси</system:String>
+    <system:String x:Key="FaultInfo" xml:space="preserve">Аварня&#13;Инфор&#13;мацня</system:String>
+    <system:String x:Key="AxleTemperature" xml:space="preserve">Т゜С&#13;оси</system:String>
+    <system:String x:Key="AxleTemperature1" xml:space="preserve"></system:String>
+    <system:String x:Key="CurrentMaxOther" xml:space="preserve">本&#13;MAX&#13;他</system:String>
     <system:String x:Key="AxleBitTemperature">ПП.оси Т゜С</system:String>
     <system:String x:Key="Axial" xml:space="preserve">ОСИ N0</system:String>
     <system:String x:Key="Temperature">温度℃</system:String>
@@ -30,7 +32,7 @@
     <system:String x:Key="Axis">ОСИ</system:String>
     <system:String x:Key="Position">N0</system:String>
     <system:String x:Key="AxleTripInfo">Раз.цепь：‘×××’；КЗ：‘---’；Авария：Индик.крас.цвета</system:String>
-    <system:String x:Key="CurrentCar" xml:space="preserve">本&#13;车</system:String>
+    <system:String x:Key="CurrentCar" xml:space="preserve">Дан&#13;车</system:String>
     <system:String x:Key="OthertCar" xml:space="preserve">他&#13;车</system:String>
     <system:String x:Key="DieselEngineSpeed1" xml:space="preserve">Скор.вр.кол.&#13;вала д.</system:String>
     <system:String x:Key="RunParam">Ходовые параметры</system:String>
