--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/ReconnectionProgressBarView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/ReconnectionProgressBarView.xaml
@@ -22,41 +22,49 @@
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="2.5*" />
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="54*" />
+                        <ColumnDefinition Width="114*" />
+                        <ColumnDefinition Width="60*" />
+                        <ColumnDefinition Width="95*" />
+                        <ColumnDefinition Width="66*" />
+                        <ColumnDefinition Width="121*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock
+                    <Button
                         Grid.Column="0"
-                        Style="{DynamicResource MainTextStyle1}"
-                        Text="{DynamicResource Date}" />
+                        Content="{DynamicResource Date}"
+                        Style="{DynamicResource MainTextButtonStyle1}" />
                     <common:EffectBorder Grid.Column="1" Style="{DynamicResource MainViewBorderStyle2}">
                         <common:EffectBorder.EffectContent>
-                            <TextBlock Foreground="Wheat" Text="{Binding Model.MainModel.Date}" />
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                Foreground="Wheat"
+                                Text="{Binding Model.MainModel.Date}" />
                         </common:EffectBorder.EffectContent>
                     </common:EffectBorder>
-                    <TextBlock
+                    <Button
                         Grid.Column="2"
-                        Style="{DynamicResource MainTextStyle1}"
-                        Text="{DynamicResource Time}" />
+                        Content="{DynamicResource Time}"
+                        Style="{DynamicResource MainTextButtonStyle1}" />
                     <common:EffectBorder Grid.Column="3" Style="{DynamicResource MainViewBorderStyle2}">
                         <common:EffectBorder.EffectContent>
-                            <TextBlock Foreground="Wheat" Text="{Binding Model.MainModel.Time}" />
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                Foreground="Wheat"
+                                Text="{Binding Model.MainModel.Time}" />
                         </common:EffectBorder.EffectContent>
                     </common:EffectBorder>
-                    <TextBlock
+                    <Button
                         Grid.Column="4"
-                        Style="{DynamicResource MainTextStyle1}"
-                        Text="{DynamicResource WorkState}" />
+                        Content="{DynamicResource WorkState}"
+                        Style="{DynamicResource MainTextButtonStyle1}" />
                     <common:EffectBorder Grid.Column="5" Style="{DynamicResource MainViewBorderStyle2}">
                         <common:EffectBorder.EffectContent>
-                            <TextBlock Foreground="Wheat" Text="{Binding Model.MainModel.WorkModel, Converter={StaticResource EnumDescritionConverter}}" />
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                Foreground="Wheat"
+                                Text="{Binding Model.MainModel.WorkModel, Converter={StaticResource EnumDescritionConverter}}" />
                         </common:EffectBorder.EffectContent>
                     </common:EffectBorder>
-
                 </Grid>
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
@@ -232,30 +240,30 @@
                         <ColumnDefinition Width="55*" />
                         <ColumnDefinition Width="15*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock
+                    <Button
                         Grid.Column="0"
-                        Style="{DynamicResource MainTextStyle5}"
-                        Text="{DynamicResource MasterVoltage}" />
-                    <TextBlock
+                        Content="{DynamicResource MasterVoltage}"
+                        Style="{DynamicResource MainTextButtonStyle2}" />
+                    <Button
                         Grid.Column="2"
-                        Style="{DynamicResource MainTextStyle5}"
-                        Text="{DynamicResource MasterCurrent}" />
-                    <TextBlock
+                        Content="{DynamicResource MasterCurrent}"
+                        Style="{DynamicResource MainTextButtonStyle2}" />
+                    <Button
                         Grid.Column="3"
-                        Style="{DynamicResource MainTextStyle5}"
-                        Text="{DynamicResource OilPressure}" />
-                    <TextBlock
+                        Content="{DynamicResource OilPressure}"
+                        Style="{DynamicResource MainTextButtonStyle2}" />
+                    <Button
                         Grid.Column="5"
-                        Style="{DynamicResource MainTextStyle5}"
-                        Text="{DynamicResource FuelPressure}" />
-                    <TextBlock
+                        Content="{DynamicResource FuelPressure}"
+                        Style="{DynamicResource MainTextButtonStyle2}" />
+                    <Button
                         Grid.Column="6"
-                        Style="{DynamicResource MainTextStyle5}"
-                        Text="{DynamicResource CoolingWaterTemperature}" />
-                    <TextBlock
+                        Content="{DynamicResource CoolingWaterTemperature}"
+                        Style="{DynamicResource MainTextButtonStyle2}" />
+                    <Button
                         Grid.Column="8"
-                        Style="{DynamicResource MainTextStyle5}"
-                        Text="{DynamicResource OILTEngineOilTemperature}" />
+                        Content="{DynamicResource OILTEngineOilTemperature}"
+                        Style="{DynamicResource MainTextButtonStyle2}" />
                 </Grid>
             </Grid>
         </Border>
