--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/AxleTemperature/CurrentAxleView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/AxleTemperature/CurrentAxleView.xaml
@@ -1,11 +1,13 @@
-﻿<UserControl x:Class="Engine.TCMS.Turkmenistan.View.Contents.AxleTemperature.CurrentAxleView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
-             mc:Ignorable="d" 
-             d:DesignHeight="120" d:DesignWidth="530">
+﻿<UserControl
+    x:Class="Engine.TCMS.Turkmenistan.View.Contents.AxleTemperature.CurrentAxleView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="120"
+    d:DesignWidth="530"
+    mc:Ignorable="d">
     <Grid>
         <Border Style="{DynamicResource MainBorderStyle}">
             <Grid>
@@ -17,21 +19,21 @@
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
                     <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
+                        <RowDefinition Height="19*" />
+                        <RowDefinition Height="31*" />
                     </Grid.RowDefinitions>
                     <common:EffectBorder
                         Width="20"
                         Height="20"
-                        Margin="5,5"
+                        Margin="0,0,5,5"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Bottom"
                         Background="Red"
                         Style="{DynamicResource MainViewBorderStyle2}" />
-                    <TextBlock
+                    <Button
                         Grid.Row="1"
-                        Style="{DynamicResource MainTextStyle6}"
-                        Text="{DynamicResource FaultInfo}" />
+                        Content="{DynamicResource FaultInfo}"
+                        Style="{DynamicResource MainTextButtonStyle3}" />
                 </Grid>
                 <Border Grid.Column="1" Style="{DynamicResource MainBorderStyle2}" />
                 <Grid Grid.Column="2">
@@ -39,10 +41,10 @@
                         <RowDefinition Height="40*" />
                         <RowDefinition Height="120*" />
                     </Grid.RowDefinitions>
-                    <TextBlock
+                    <Button
                         Grid.Row="1"
-                        Style="{DynamicResource MainTextStyle1}"
-                        Text="{DynamicResource AxleTemperature}" />
+                        Content="{DynamicResource AxleTemperature}"
+                        Style="{DynamicResource MainTextButtonStyle4}" />
                 </Grid>
                 <Grid Grid.Column="3">
                     <Grid.ColumnDefinitions>
@@ -60,25 +62,66 @@
                         Style="{DynamicResource MainBorderStyle2}">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition></ColumnDefinition>
-                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Row="0" Grid.Column="0" Text="10" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Row="1" Grid.Column="0" Text="20" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Row="2" Grid.Column="0" Text="65" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="31" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="31" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
-                            <TextBlock Grid.Row="2" Grid.Column="1" Text="44" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                HorizontalAlignment="Center"
+                                FontSize="{DynamicResource Double12}"
+                                Foreground="White"
+                                Text="10" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                HorizontalAlignment="Center"
+                                FontSize="{DynamicResource Double12}"
+                                Foreground="White"
+                                Text="20" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                HorizontalAlignment="Center"
+                                FontSize="{DynamicResource Double12}"
+                                Foreground="White"
+                                Text="65" />
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                HorizontalAlignment="Left"
+                                FontSize="{DynamicResource Double12}"
+                                Foreground="White"
+                                Text="31" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                HorizontalAlignment="Left"
+                                FontSize="{DynamicResource Double12}"
+                                Foreground="White"
+                                Text="31" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="1"
+                                HorizontalAlignment="Left"
+                                FontSize="{DynamicResource Double12}"
+                                Foreground="White"
+                                Text="44" />
                         </Grid>
-                     
+
                     </Border>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{DynamicResource AxleBitTemperature}" Style="{DynamicResource MainTextStyle6}"></TextBlock>
+                    <Button
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Content="{DynamicResource AxleBitTemperature}"
+                        Style="{DynamicResource MainTextButtonStyle3}" />
                 </Grid>
             </Grid>
         </Border>
